--- a/README.org
+++ b/README.org
@@ -9,6 +9,8 @@
     (sbcl-ir-visualizer:run)
   #+END_SRC
 
+  [[file:documentation/screenshot.png]]
+
   Then edit the form and/or change the optimization settings and watch
   the intermediate representations change.
 
